--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,6 +8,7 @@ SRCS =		ft_strlen.c		ft_strdup.c		\
 			ft_isalpha.c	ft_strcmp.c		\
 			ft_isdigit.c	ft_isalnum.c	\
 			ft_itoa.c		ft_split.c		\
+			ft_atoi.c						\
 
 OBJS = $(SRCS:.c=.o)
 
